# platform-tourism-demand-shaping

./: .gitignore  LICENSE.md  README.md  main.py  pyproject.toml
notebooks/: 00_source_audit.py  01_data_exploration.py  02_analysis.py  02_country_screening.py
notebooks/__marimo__/session/: 00_source_audit.py.json  01_data_exploration.py.json
reports/business/: Makefile  country_screening_business.tex  latexmkrc
reports/business/sections/: 01_executive_summary.tex  02_context.tex  03_findings.tex  04_recommendations.tex  05_appendix.tex
reports/business/styles/: vm-business.sty  vm-code.sty  vm-common.sty  vm-technical.sty
reports/technical/: country_screening_methodology.qmd
sql/: 01_top_oportunity_cpuntries.sql  02_shoulder_month_recommendations.sql  03_yoy_growth_table.sql
src/platform_tourism/: __init__.py  clean.py  config.py  ingest.py  logger.py  marts.py  visuals.py
tests/: conftest.py  test_clean.py  test_config.py
