[project]
name = "platform-tourism-demand-shaping"
version = "0.1.0"
description = "Platform tourism demand shaping analysis"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "marimo>=0.2.6",
    "matplotlib>=3.10.9",
    "numpy>=2.4.0",
    "pandas>=3.0.0",
    "pyarrow>=24.0.0",
    "pyjstat>=2.4.0",
    "pytest>=4.0",
    "requests>=2.34.2",
]

[dependency-groups]
dev = ["ipykernel>=7.2.0", "pytest>=9.0.3", "ruff>=0.15.13"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/platform_tourism"]
